--- a/admins/install-nix.html
+++ b/admins/install-nix.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>based on Webmention (TODO) - Hatsu Documentation</title>
+        <title>Nix/NixOS Installation - Hatsu Documentation</title>
 
 
         <!-- Custom HTML head -->
@@ -92,7 +92,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../intro.html"><strong aria-hidden="true">1.</strong> Intro</a></li><li class="chapter-item expanded affix "><li class="part-title">for Users</li><li class="chapter-item expanded "><a href="../users/getting-started.html"><strong aria-hidden="true">2.</strong> Getting Started</a></li><li class="chapter-item expanded "><a href="../users/feed.html"><strong aria-hidden="true">3.</strong> Feed</a></li><li class="chapter-item expanded "><a href="../users/redirecting.html"><strong aria-hidden="true">4.</strong> Redirecting</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../users/redirecting-with-static-files-and-markup.html"><strong aria-hidden="true">4.1.</strong> with Static files and Markup</a></li><li class="chapter-item expanded "><a href="../users/redirecting-with-redirects-file.html"><strong aria-hidden="true">4.2.</strong> with Redirects file</a></li><li class="chapter-item expanded "><a href="../users/redirecting-with-platform-specific-config.html"><strong aria-hidden="true">4.3.</strong> with Platform-Specific Configuration</a></li><li class="chapter-item expanded "><a href="../users/redirecting-with-aoba.html"><strong aria-hidden="true">4.4.</strong> with Aoba (Lume & Hono)</a></li><li class="chapter-item expanded "><a href="../users/redirecting-with-fep-612d.html"><strong aria-hidden="true">4.5.</strong> with FEP-612d</a></li></ol></li><li class="chapter-item expanded "><a href="../users/backfeed.html"><strong aria-hidden="true">5.</strong> Backfeed</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../users/backfeed-based-on-kkna.html"><strong aria-hidden="true">5.1.</strong> based on KKna</a></li><li class="chapter-item expanded "><a href="../users/backfeed-based-on-mastodon-comments.html"><strong aria-hidden="true">5.2.</strong> based on Mastodon Comments</a></li><li class="chapter-item expanded "><a href="../users/backfeed-based-on-webmention.html" class="active"><strong aria-hidden="true">5.3.</strong> based on Webmention (TODO)</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">for Admins</li><li class="chapter-item expanded "><a href="../admins/install.html"><strong aria-hidden="true">6.</strong> Install</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../admins/install-docker.html"><strong aria-hidden="true">6.1.</strong> Docker Installation</a></li><li class="chapter-item expanded "><a href="../admins/install-binary.html"><strong aria-hidden="true">6.2.</strong> Binary Installation</a></li><li class="chapter-item expanded "><a href="../admins/install-nix.html"><strong aria-hidden="true">6.3.</strong> Nix/NixOS Installation</a></li></ol></li><li class="chapter-item expanded "><a href="../admins/environments.html"><strong aria-hidden="true">7.</strong> Environments</a></li><li class="chapter-item expanded "><a href="../admins/create-account.html"><strong aria-hidden="true">8.</strong> Create Account</a></li><li class="chapter-item expanded affix "><li class="part-title">for Developers</li><li class="chapter-item expanded "><a href="../developers/prepare.html"><strong aria-hidden="true">9.</strong> Prepare</a></li><li class="chapter-item expanded "><a href="../developers/development-local.html"><strong aria-hidden="true">10.</strong> Local Development</a></li><li class="chapter-item expanded "><a href="../developers/development-docker.html"><strong aria-hidden="true">11.</strong> Docker Development</a></li><li class="chapter-item expanded affix "><li class="part-title">Others</li><li class="chapter-item expanded "><a href="../others/compatibility-chart.html"><strong aria-hidden="true">12.</strong> Compatibility Chart</a></li><li class="chapter-item expanded "><a href="../others/federation.html"><strong aria-hidden="true">13.</strong> Federation</a></li><li class="chapter-item expanded "><a href="../others/json-feed-extension.html"><strong aria-hidden="true">14.</strong> JSON Feed Extension</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../intro.html"><strong aria-hidden="true">1.</strong> Intro</a></li><li class="chapter-item expanded affix "><li class="part-title">for Users</li><li class="chapter-item expanded "><a href="../users/getting-started.html"><strong aria-hidden="true">2.</strong> Getting Started</a></li><li class="chapter-item expanded "><a href="../users/feed.html"><strong aria-hidden="true">3.</strong> Feed</a></li><li class="chapter-item expanded "><a href="../users/redirecting.html"><strong aria-hidden="true">4.</strong> Redirecting</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../users/redirecting-with-static-files-and-markup.html"><strong aria-hidden="true">4.1.</strong> with Static files and Markup</a></li><li class="chapter-item expanded "><a href="../users/redirecting-with-redirects-file.html"><strong aria-hidden="true">4.2.</strong> with Redirects file</a></li><li class="chapter-item expanded "><a href="../users/redirecting-with-platform-specific-config.html"><strong aria-hidden="true">4.3.</strong> with Platform-Specific Configuration</a></li><li class="chapter-item expanded "><a href="../users/redirecting-with-aoba.html"><strong aria-hidden="true">4.4.</strong> with Aoba (Lume & Hono)</a></li><li class="chapter-item expanded "><a href="../users/redirecting-with-fep-612d.html"><strong aria-hidden="true">4.5.</strong> with FEP-612d</a></li></ol></li><li class="chapter-item expanded "><a href="../users/backfeed.html"><strong aria-hidden="true">5.</strong> Backfeed</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../users/backfeed-based-on-kkna.html"><strong aria-hidden="true">5.1.</strong> based on KKna</a></li><li class="chapter-item expanded "><a href="../users/backfeed-based-on-mastodon-comments.html"><strong aria-hidden="true">5.2.</strong> based on Mastodon Comments</a></li><li class="chapter-item expanded "><a href="../users/backfeed-based-on-webmention.html"><strong aria-hidden="true">5.3.</strong> based on Webmention (TODO)</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">for Admins</li><li class="chapter-item expanded "><a href="../admins/install.html"><strong aria-hidden="true">6.</strong> Install</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../admins/install-docker.html"><strong aria-hidden="true">6.1.</strong> Docker Installation</a></li><li class="chapter-item expanded "><a href="../admins/install-binary.html"><strong aria-hidden="true">6.2.</strong> Binary Installation</a></li><li class="chapter-item expanded "><a href="../admins/install-nix.html" class="active"><strong aria-hidden="true">6.3.</strong> Nix/NixOS Installation</a></li></ol></li><li class="chapter-item expanded "><a href="../admins/environments.html"><strong aria-hidden="true">7.</strong> Environments</a></li><li class="chapter-item expanded "><a href="../admins/create-account.html"><strong aria-hidden="true">8.</strong> Create Account</a></li><li class="chapter-item expanded affix "><li class="part-title">for Developers</li><li class="chapter-item expanded "><a href="../developers/prepare.html"><strong aria-hidden="true">9.</strong> Prepare</a></li><li class="chapter-item expanded "><a href="../developers/development-local.html"><strong aria-hidden="true">10.</strong> Local Development</a></li><li class="chapter-item expanded "><a href="../developers/development-docker.html"><strong aria-hidden="true">11.</strong> Docker Development</a></li><li class="chapter-item expanded affix "><li class="part-title">Others</li><li class="chapter-item expanded "><a href="../others/compatibility-chart.html"><strong aria-hidden="true">12.</strong> Compatibility Chart</a></li><li class="chapter-item expanded "><a href="../others/federation.html"><strong aria-hidden="true">13.</strong> Federation</a></li><li class="chapter-item expanded "><a href="../others/json-feed-extension.html"><strong aria-hidden="true">14.</strong> JSON Feed Extension</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -151,7 +151,7 @@
                         <a href="https://github.com/importantimport/hatsu" title="Git repository" aria-label="Git repository">
                             <i id="git-repository-button" class="fa fa-github"></i>
                         </a>
-                        <a href="https://github.com/importantimport/hatsu/edit/main/docs/src/users/backfeed-based-on-webmention.md" title="Suggest an edit" aria-label="Suggest an edit">
+                        <a href="https://github.com/importantimport/hatsu/edit/main/docs/src/admins/install-nix.md" title="Suggest an edit" aria-label="Suggest an edit">
                             <i id="git-edit-button" class="fa fa-edit"></i>
                         </a>
 
@@ -180,21 +180,61 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="backfeed-based-on-webmention"><a class="header" href="#backfeed-based-on-webmention">Backfeed based on Webmention</a></h1>
+                        <h1 id="nixnixos-installation"><a class="header" href="#nixnixos-installation">Nix/NixOS Installation</a></h1>
 <blockquote>
-<p>This section is not yet implemented in Hatsu.</p>
+<p>Hatsu uses the <code>x86-64-v3</code> target architecture for optimal performance.</p>
+<p>If you are using an older processor, you currently need to build locally and change the corresponding values in <code>.cargo/config.toml</code>.</p>
 </blockquote>
-<p>TODO</p>
+<p>Hatsu is available in Nixpkgs, NUR and Flakes.</p>
+<p>macOS (Darwin) is not supported.</p>
+<h2 id="nixpkgs"><a class="header" href="#nixpkgs">Nixpkgs</a></h2>
+<p>Nixpkgs only has a stable version, you need nixos-24.11 or nixos-unstable.</p>
+<pre><code class="language-nix">{ pkgs, ... }: {
+  environment.systemPackages = with pkgs; [
+    hatsu
+  ];
+}
+</code></pre>
+<h2 id="nur-sn0wm1x"><a class="header" href="#nur-sn0wm1x">NUR (SN0WM1X)</a></h2>
+<p>The SN0WM1X NUR may contain beta versions, but there may be a delay.</p>
+<p>You need to <a href="https://github.com/nix-community/nur#installation">follow the instructions to set up NUR</a> first.</p>
+<pre><code class="language-nix">{ pkgs, ... }: {
+  environment.systemPackages = with pkgs; [
+    nur.repos.sn0wm1x.hatsu
+  ];
+}
+</code></pre>
+<h2 id="flakes"><a class="header" href="#flakes">Flakes</a></h2>
+<blockquote>
+<p>This is untested.</p>
+</blockquote>
+<p>Add the hatsu repository directly to your flake inputs, up to date but unstable.</p>
+<pre><code class="language-nix">{
+  inputs: {
+    nixpkgs.url = "github:NixOS/nixpkgs/nixos-unstable";
+    # ...
+    hatsu.url = "github:importantimport/hatsu";
+    hatsu.inputs.nixpkgs.follows = "nixpkgs";
+    # ...
+  };
+}
+</code></pre>
+<pre><code class="language-nix">{ inputs, pkgs, ... }: {
+  environment.systemPackages = [
+    inputs.hatsu.packages.${pkgs.system}.default;
+  ];
+}
+</code></pre>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../users/backfeed-based-on-mastodon-comments.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../admins/install-binary.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../admins/install.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../admins/environments.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -204,11 +244,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../users/backfeed-based-on-mastodon-comments.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../admins/install-binary.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../admins/install.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../admins/environments.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
